--- a/src/output.css
+++ b/src/output.css
@@ -177,12 +177,6 @@
   .relative {
     position: relative;
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
-  .top-1\.5 {
-    top: calc(var(--spacing) * 1.5);
-  }
   .top-4 {
     top: calc(var(--spacing) * 4);
   }
@@ -213,26 +207,11 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .my-\[30px\] {
+    margin-block: 30px;
+  }
   .-mt-\[20px\] {
     margin-top: calc(20px * -1);
-  }
-  .-mt-\[30\%\] {
-    margin-top: calc(30% * -1);
-  }
-  .-mt-\[50\%\] {
-    margin-top: calc(50% * -1);
-  }
-  .-mt-\[70\%\] {
-    margin-top: calc(70% * -1);
-  }
-  .-mt-\[128px\] {
-    margin-top: calc(128px * -1);
-  }
-  .-mt-\[456px\] {
-    margin-top: calc(456px * -1);
-  }
-  .-mt-\[496px\] {
-    margin-top: calc(496px * -1);
   }
   .mt-\[30px\] {
     margin-top: 30px;
@@ -249,48 +228,6 @@
   .mt-\[105px\] {
     margin-top: 105px;
   }
-  .-mr-\[32px\] {
-    margin-right: calc(32px * -1);
-  }
-  .-mr-\[40px\] {
-    margin-right: calc(40px * -1);
-  }
-  .-mr-\[42px\] {
-    margin-right: calc(42px * -1);
-  }
-  .-mr-\[50\%\] {
-    margin-right: calc(50% * -1);
-  }
-  .-mr-\[50px\] {
-    margin-right: calc(50px * -1);
-  }
-  .-mr-\[70\%\] {
-    margin-right: calc(70% * -1);
-  }
-  .-mr-\[80\%\] {
-    margin-right: calc(80% * -1);
-  }
-  .-mr-\[100\%\] {
-    margin-right: calc(100% * -1);
-  }
-  .-mr-\[100px\] {
-    margin-right: calc(100px * -1);
-  }
-  .-mr-\[200\%\] {
-    margin-right: calc(200% * -1);
-  }
-  .-mr-\[200px\] {
-    margin-right: calc(200px * -1);
-  }
-  .-mr-\[500px\] {
-    margin-right: calc(500px * -1);
-  }
-  .-mr-\[900px\] {
-    margin-right: calc(900px * -1);
-  }
-  .mr-\[900px\] {
-    margin-right: 900px;
-  }
   .mr-auto {
     margin-right: auto;
   }
@@ -305,12 +242,6 @@
   }
   .mb-\[116px\] {
     margin-bottom: 116px;
-  }
-  .-ml-\[70\%\] {
-    margin-left: calc(70% * -1);
-  }
-  .ml-\[500px\] {
-    margin-left: 500px;
   }
   .ml-auto {
     margin-left: auto;
@@ -390,6 +321,9 @@
   .h-full {
     height: 100%;
   }
+  .max-h-\[250px\] {
+    max-height: 250px;
+  }
   .max-h-\[307\.15px\] {
     max-height: 307.15px;
   }
@@ -401,12 +335,6 @@
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
-  }
-  .w-11 {
-    width: calc(var(--spacing) * 11);
-  }
-  .w-11\/12 {
-    width: calc(11/12 * 100%);
   }
   .w-\[24px\] {
     width: 24px;
@@ -441,11 +369,17 @@
   .w-\[171px\] {
     width: 171px;
   }
+  .w-\[196px\] {
+    width: 196px;
+  }
   .w-\[200px\] {
     width: 200px;
   }
   .w-\[215px\] {
     width: 215px;
+  }
+  .w-\[226px\] {
+    width: 226px;
   }
   .w-\[258px\] {
     width: 258px;
@@ -455,9 +389,6 @@
   }
   .w-\[276px\] {
     width: 276px;
-  }
-  .w-\[300px\] {
-    width: 300px;
   }
   .w-\[315px\] {
     width: 315px;
@@ -470,12 +401,6 @@
   }
   .w-\[780px\] {
     width: 780px;
-  }
-  .w-\[940\] {
-    width: 940;
-  }
-  .w-\[940px\] {
-    width: 940px;
   }
   .w-full {
     width: 100%;
@@ -527,9 +452,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .cursor-progress {
-    cursor: progress;
   }
   .resize {
     resize: both;
@@ -587,26 +509,20 @@
   .bg-\[\#EAF0ED\] {
     background-color: #EAF0ED;
   }
-  .bg-amber-200 {
-    background-color: var(--color-amber-200);
-  }
-  .bg-amber-300 {
-    background-color: var(--color-amber-300);
-  }
   .bg-cover {
     background-size: cover;
   }
   .bg-center {
     background-position: center;
   }
-  .object-contain {
-    object-fit: contain;
-  }
   .object-cover {
     object-fit: cover;
   }
   .px-\[33px\] {
     padding-inline: 33px;
+  }
+  .py-\[30px\] {
+    padding-block: 30px;
   }
   .text-center {
     text-align: center;
@@ -615,8 +531,9 @@
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
-  .text-\[20px\] {
-    font-size: 20px;
+  .leading-8 {
+    --tw-leading: calc(var(--spacing) * 8);
+    line-height: calc(var(--spacing) * 8);
   }
   .font-light {
     --tw-font-weight: var(--font-weight-light);
@@ -657,11 +574,6 @@
   .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .\[text-orientation\:upright\] {
     text-orientation: upright;
@@ -753,16 +665,6 @@
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
-  .max-\[769px\]\:grid-rows-1 {
-    @media (width < 769px) {
-      grid-template-rows: repeat(1, minmax(0, 1fr));
-    }
-  }
-  .max-\[769px\]\:grid-rows-3 {
-    @media (width < 769px) {
-      grid-template-rows: repeat(3, minmax(0, 1fr));
-    }
-  }
   .max-\[769px\]\:flex-col {
     @media (width < 769px) {
       flex-direction: column;
@@ -798,11 +700,6 @@
       display: none;
     }
   }
-  .md\:w-\[620px\] {
-    @media (width >= 48rem) {
-      width: 620px;
-    }
-  }
   .md\:px-\[42px\] {
     @media (width >= 48rem) {
       padding-inline: 42px;
@@ -833,6 +730,10 @@
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-leading {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -907,6 +808,7 @@
       --tw-skew-x: initial;
       --tw-skew-y: initial;
       --tw-border-style: solid;
+      --tw-leading: initial;
       --tw-font-weight: initial;
       --tw-tracking: initial;
       --tw-outline-style: solid;
