--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,7 @@ body{
     width: 57%;
     padding-block: 14px;
     text-align: center;
+    border:1px solid $color-secondary;
 }
 
 .product-price{
@@ -39,6 +40,7 @@ body{
     width: 43%;
     padding-block: 14px;
     text-align: center;
+    border:1px solid $color-secondary;
 }
 
 .lg-btn{
