--- a/src/output.css
+++ b/src/output.css
@@ -12,6 +12,8 @@
     --spacing: 0.25rem;
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-4xl: 2.25rem;
+    --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-light: 300;
     --font-weight-semibold: 600;
     --tracking-widest: 0.1em;
@@ -230,14 +232,17 @@
   .mt-\[105px\] {
     margin-top: 105px;
   }
-  .mr-1 {
-    margin-right: calc(var(--spacing) * 1);
-  }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
   .mr-auto {
     margin-right: auto;
+  }
+  .mb-9 {
+    margin-bottom: calc(var(--spacing) * 9);
+  }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
   }
   .mb-\[27px\] {
     margin-bottom: 27px;
@@ -253,9 +258,6 @@
   }
   .mb-\[116px\] {
     margin-bottom: 116px;
-  }
-  .ml-1 {
-    margin-left: calc(var(--spacing) * 1);
   }
   .ml-auto {
     margin-left: auto;
@@ -302,6 +304,9 @@
   .h-\[60px\] {
     height: 60px;
   }
+  .h-\[110px\] {
+    height: 110px;
+  }
   .h-\[116px\] {
     height: 116px;
   }
@@ -311,8 +316,8 @@
   .h-\[128px\] {
     height: 128px;
   }
-  .h-\[163px\] {
-    height: 163px;
+  .h-\[200px\] {
+    height: 200px;
   }
   .h-\[218px\] {
     height: 218px;
@@ -356,6 +361,9 @@
   .max-h-\[460px\] {
     max-height: 460px;
   }
+  .min-h-\[350px\] {
+    min-height: 350px;
+  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
@@ -380,9 +388,6 @@
   .w-\[40px\] {
     width: 40px;
   }
-  .w-\[50px\] {
-    width: 50px;
-  }
   .w-\[60px\] {
     width: 60px;
   }
@@ -392,8 +397,14 @@
   .w-\[72px\] {
     width: 72px;
   }
+  .w-\[83\.4px\] {
+    width: 83.4px;
+  }
   .w-\[89px\] {
     width: 89px;
+  }
+  .w-\[108px\] {
+    width: 108px;
   }
   .w-\[171px\] {
     width: 171px;
@@ -416,15 +427,6 @@
   .w-\[258px\] {
     width: 258px;
   }
-  .w-\[260px\] {
-    width: 260px;
-  }
-  .w-\[265px\] {
-    width: 265px;
-  }
-  .w-\[271px\] {
-    width: 271px;
-  }
   .w-\[272px\] {
     width: 272px;
   }
@@ -434,8 +436,14 @@
   .w-\[315px\] {
     width: 315px;
   }
+  .w-\[330px\] {
+    width: 330px;
+  }
   .w-\[380px\] {
     width: 380px;
+  }
+  .w-\[390px\] {
+    width: 390px;
   }
   .w-\[620px\] {
     width: 620px;
@@ -457,6 +465,9 @@
   }
   .max-w-\[300px\] {
     max-width: 300px;
+  }
+  .max-w-\[390px\] {
+    max-width: 390px;
   }
   .max-w-\[425px\] {
     max-width: 425px;
@@ -561,9 +572,9 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-0 {
-    border-style: var(--tw-border-style);
-    border-width: 0px;
+  .border-x {
+    border-inline-style: var(--tw-border-style);
+    border-inline-width: 1px;
   }
   .border-y {
     border-block-style: var(--tw-border-style);
@@ -581,8 +592,8 @@
   .bg-\[\#EAF0ED\] {
     background-color: #EAF0ED;
   }
-  .bg-amber-200 {
-    background-color: var(--color-amber-200);
+  .bg-\[\#FFFFFF\] {
+    background-color: #FFFFFF;
   }
   .bg-cover {
     background-size: cover;
@@ -602,11 +613,17 @@
   .py-\[30px\] {
     padding-block: 30px;
   }
-  .pt-4 {
-    padding-top: calc(var(--spacing) * 4);
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
   }
   .pt-\[30px\] {
     padding-top: 30px;
+  }
+  .pt-\[40px\] {
+    padding-top: 40px;
+  }
+  .pb-\[60px\] {
+    padding-bottom: 60px;
   }
   .text-center {
     text-align: center;
@@ -614,6 +631,10 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
   .leading-8 {
     --tw-leading: calc(var(--spacing) * 8);
@@ -659,14 +680,6 @@
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .\[border\:none\] {
-    border: none;
-  }
   .\[scrollbar-width\:none\] {
     scrollbar-width: none;
   }
@@ -693,6 +706,13 @@
       }
     }
   }
+  .hover\:bg-\[\#FFE180\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #FFE180;
+      }
+    }
+  }
   .hover\:bg-\[\#FFE180\]\/80 {
     &:hover {
       @media (hover: hover) {
@@ -713,6 +733,11 @@
       @media (hover: hover) {
         color: #3F5D45;
       }
+    }
+  }
+  .active\:bg-\[\#FFE180\] {
+    &:active {
+      background-color: #FFE180;
     }
   }
   .max-\[769px\]\:mb-\[30px\] {
@@ -785,6 +810,11 @@
       margin-top: calc(89px * -1);
     }
   }
+  .md\:mb-\[60px\] {
+    @media (width >= 48rem) {
+      margin-bottom: 60px;
+    }
+  }
   .md\:block {
     @media (width >= 48rem) {
       display: block;
@@ -800,9 +830,29 @@
       display: none;
     }
   }
+  .md\:max-w-\[390px\] {
+    @media (width >= 48rem) {
+      max-width: 390px;
+    }
+  }
+  .md\:min-w-\[390px\] {
+    @media (width >= 48rem) {
+      min-width: 390px;
+    }
+  }
+  .md\:flex-col {
+    @media (width >= 48rem) {
+      flex-direction: column;
+    }
+  }
   .md\:px-\[42px\] {
     @media (width >= 48rem) {
       padding-inline: 42px;
+    }
+  }
+  .md\:pt-\[10px\] {
+    @media (width >= 48rem) {
+      padding-top: 10px;
     }
   }
 }
