--- a/src/output.css
+++ b/src/output.css
@@ -7,7 +7,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-amber-200: oklch(92.4% 0.12 95.746);
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-2xl: 1.5rem;
@@ -17,8 +16,6 @@
     --font-weight-light: 300;
     --font-weight-semibold: 600;
     --tracking-widest: 0.1em;
-    --default-transition-duration: 150ms;
-    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -214,8 +211,14 @@
   .-mt-\[20px\] {
     margin-top: calc(20px * -1);
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-\[13px\] {
     margin-top: 13px;
+  }
+  .mt-\[30\.5px\] {
+    margin-top: 30.5px;
   }
   .mt-\[30px\] {
     margin-top: 30px;
@@ -237,6 +240,9 @@
   }
   .mr-auto {
     margin-right: auto;
+  }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
   }
   .mb-9 {
     margin-bottom: calc(var(--spacing) * 9);
@@ -277,6 +283,9 @@
   .table {
     display: table;
   }
+  .aspect-\[1\.5\] {
+    aspect-ratio: 1.5;
+  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
@@ -298,11 +307,17 @@
   .h-\[40px\] {
     height: 40px;
   }
+  .h-\[45px\] {
+    height: 45px;
+  }
   .h-\[56px\] {
     height: 56px;
   }
   .h-\[60px\] {
     height: 60px;
+  }
+  .h-\[65px\] {
+    height: 65px;
   }
   .h-\[110px\] {
     height: 110px;
@@ -349,6 +364,9 @@
   .h-full {
     height: 100%;
   }
+  .max-h-\[106px\] {
+    max-height: 106px;
+  }
   .max-h-\[250px\] {
     max-height: 250px;
   }
@@ -360,6 +378,12 @@
   }
   .max-h-\[460px\] {
     max-height: 460px;
+  }
+  .min-h-12 {
+    min-height: calc(var(--spacing) * 12);
+  }
+  .min-h-\[106px\] {
+    min-height: 106px;
   }
   .min-h-\[350px\] {
     min-height: 350px;
@@ -387,6 +411,12 @@
   }
   .w-\[40px\] {
     width: 40px;
+  }
+  .w-\[49\%\] {
+    width: 49%;
+  }
+  .w-\[51\%\] {
+    width: 51%;
   }
   .w-\[60px\] {
     width: 60px;
@@ -420,9 +450,6 @@
   }
   .w-\[226px\] {
     width: 226px;
-  }
-  .w-\[250px\] {
-    width: 250px;
   }
   .w-\[251px\] {
     width: 251px;
@@ -469,14 +496,14 @@
   .max-w-\[300px\] {
     max-width: 300px;
   }
-  .max-w-\[390px\] {
-    max-width: 390px;
-  }
   .max-w-\[425px\] {
     max-width: 425px;
   }
   .max-w-\[460px\] {
     max-width: 460px;
+  }
+  .max-w-\[708px\] {
+    max-width: 708px;
   }
   .max-w-\[780px\] {
     max-width: 780px;
@@ -559,9 +586,6 @@
   .gap-\[79px\] {
     gap: 79px;
   }
-  .overflow-auto {
-    overflow: auto;
-  }
   .overflow-hidden {
     overflow: hidden;
   }
@@ -610,6 +634,12 @@
   .object-cover {
     object-fit: cover;
   }
+  .p-\[30px\] {
+    padding: 30px;
+  }
+  .px-\[30px\] {
+    padding-inline: 30px;
+  }
   .px-\[33px\] {
     padding-inline: 33px;
   }
@@ -622,17 +652,23 @@
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
   }
-  .pt-\[30px\] {
-    padding-top: 30px;
+  .pt-\[30\.5px\] {
+    padding-top: 30.5px;
   }
-  .pt-\[40px\] {
-    padding-top: 40px;
+  .pb-\[8\.5px\] {
+    padding-bottom: 8.5px;
   }
   .pb-\[60px\] {
     padding-bottom: 60px;
   }
+  .pl-4 {
+    padding-left: calc(var(--spacing) * 4);
+  }
   .text-center {
     text-align: center;
+  }
+  .text-right {
+    text-align: right;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -641,6 +677,9 @@
   .text-4xl {
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-\[20px\] {
+    font-size: 20px;
   }
   .leading-8 {
     --tw-leading: calc(var(--spacing) * 8);
@@ -685,11 +724,6 @@
   .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .\[scrollbar-width\:none\] {
     scrollbar-width: none;
@@ -821,11 +855,6 @@
       margin-top: calc(89px * -1);
     }
   }
-  .md\:mb-\[60px\] {
-    @media (width >= 48rem) {
-      margin-bottom: 60px;
-    }
-  }
   .md\:block {
     @media (width >= 48rem) {
       display: block;
@@ -846,19 +875,9 @@
       width: 272px;
     }
   }
-  .md\:max-w-\[390px\] {
-    @media (width >= 48rem) {
-      max-width: 390px;
-    }
-  }
   .md\:min-w-\[390px\] {
     @media (width >= 48rem) {
       min-width: 390px;
-    }
-  }
-  .md\:flex-col {
-    @media (width >= 48rem) {
-      flex-direction: column;
     }
   }
   .md\:px-\[42px\] {
