--- a/src/output.css
+++ b/src/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-800: oklch(47.3% 0.137 46.201);
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-2xl: 1.5rem;
@@ -310,6 +311,9 @@
   .h-\[45px\] {
     height: 45px;
   }
+  .h-\[48px\] {
+    height: 48px;
+  }
   .h-\[56px\] {
     height: 56px;
   }
@@ -337,6 +341,9 @@
   .h-\[218px\] {
     height: 218px;
   }
+  .h-\[249px\] {
+    height: 249px;
+  }
   .h-\[256px\] {
     height: 256px;
   }
@@ -363,9 +370,6 @@
   }
   .h-full {
     height: 100%;
-  }
-  .max-h-\[106px\] {
-    max-height: 106px;
   }
   .max-h-\[250px\] {
     max-height: 250px;
@@ -463,6 +467,9 @@
   .w-\[276px\] {
     width: 276px;
   }
+  .w-\[300px\] {
+    width: 300px;
+  }
   .w-\[315px\] {
     width: 315px;
   }
@@ -493,6 +500,9 @@
   .max-w-\[259\.67px\] {
     max-width: 259.67px;
   }
+  .max-w-\[260px\] {
+    max-width: 260px;
+  }
   .max-w-\[300px\] {
     max-width: 300px;
   }
@@ -501,9 +511,6 @@
   }
   .max-w-\[460px\] {
     max-width: 460px;
-  }
-  .max-w-\[708px\] {
-    max-width: 708px;
   }
   .max-w-\[780px\] {
     max-width: 780px;
@@ -610,6 +617,10 @@
     border-block-style: var(--tw-border-style);
     border-block-width: 1px;
   }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
   .border-\[\#EAF0ED\] {
     border-color: #EAF0ED;
   }
@@ -651,9 +662,6 @@
   }
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
-  }
-  .pt-\[30\.5px\] {
-    padding-top: 30.5px;
   }
   .pb-\[8\.5px\] {
     padding-bottom: 8.5px;
@@ -765,6 +773,13 @@
       }
     }
   }
+  .hover\:fill-amber-800 {
+    &:hover {
+      @media (hover: hover) {
+        fill: var(--color-amber-800);
+      }
+    }
+  }
   .hover\:font-semibold {
     &:hover {
       @media (hover: hover) {
@@ -870,14 +885,94 @@
       display: none;
     }
   }
+  .md\:aspect-square {
+    @media (width >= 48rem) {
+      aspect-ratio: 1 / 1;
+    }
+  }
+  .md\:h-\[48px\] {
+    @media (width >= 48rem) {
+      height: 48px;
+    }
+  }
+  .md\:w-\[107px\] {
+    @media (width >= 48rem) {
+      width: 107px;
+    }
+  }
+  .md\:w-\[110px\] {
+    @media (width >= 48rem) {
+      width: 110px;
+    }
+  }
+  .md\:w-\[144px\] {
+    @media (width >= 48rem) {
+      width: 144px;
+    }
+  }
   .md\:w-\[272px\] {
     @media (width >= 48rem) {
       width: 272px;
     }
   }
+  .md\:w-\[290px\] {
+    @media (width >= 48rem) {
+      width: 290px;
+    }
+  }
+  .md\:w-\[437px\] {
+    @media (width >= 48rem) {
+      width: 437px;
+    }
+  }
+  .md\:w-\[620px\] {
+    @media (width >= 48rem) {
+      width: 620px;
+    }
+  }
   .md\:min-w-\[390px\] {
     @media (width >= 48rem) {
       min-width: 390px;
+    }
+  }
+  .md\:flex-col {
+    @media (width >= 48rem) {
+      flex-direction: column;
+    }
+  }
+  .md\:flex-row {
+    @media (width >= 48rem) {
+      flex-direction: row;
+    }
+  }
+  .md\:items-center {
+    @media (width >= 48rem) {
+      align-items: center;
+    }
+  }
+  .md\:justify-between {
+    @media (width >= 48rem) {
+      justify-content: space-between;
+    }
+  }
+  .md\:justify-center {
+    @media (width >= 48rem) {
+      justify-content: center;
+    }
+  }
+  .md\:p-0 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:px-0 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:px-\[30px\] {
+    @media (width >= 48rem) {
+      padding-inline: 30px;
     }
   }
   .md\:px-\[42px\] {
