--- a/src/output.css
+++ b/src/output.css
@@ -203,6 +203,9 @@
   .z-10 {
     z-index: 10;
   }
+  .mx-\[18px\] {
+    margin-inline: 18px;
+  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -217,9 +220,6 @@
   }
   .mt-\[13px\] {
     margin-top: 13px;
-  }
-  .mt-\[30\.5px\] {
-    margin-top: 30.5px;
   }
   .mt-\[30px\] {
     margin-top: 30px;
@@ -287,6 +287,9 @@
   .aspect-\[1\.5\] {
     aspect-ratio: 1.5;
   }
+  .aspect-square {
+    aspect-ratio: 1 / 1;
+  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
@@ -310,9 +313,6 @@
   }
   .h-\[45px\] {
     height: 45px;
-  }
-  .h-\[48px\] {
-    height: 48px;
   }
   .h-\[56px\] {
     height: 56px;
@@ -491,6 +491,9 @@
   .w-full {
     width: 100%;
   }
+  .max-w-12 {
+    max-width: calc(var(--spacing) * 12);
+  }
   .max-w-\[89px\] {
     max-width: 89px;
   }
@@ -648,6 +651,9 @@
   .p-\[30px\] {
     padding: 30px;
   }
+  .px-\[18px\] {
+    padding-inline: 18px;
+  }
   .px-\[30px\] {
     padding-inline: 30px;
   }
@@ -773,13 +779,6 @@
       }
     }
   }
-  .hover\:fill-amber-800 {
-    &:hover {
-      @media (hover: hover) {
-        fill: var(--color-amber-800);
-      }
-    }
-  }
   .hover\:font-semibold {
     &:hover {
       @media (hover: hover) {
@@ -890,14 +889,24 @@
       aspect-ratio: 1 / 1;
     }
   }
+  .md\:h-12 {
+    @media (width >= 48rem) {
+      height: calc(var(--spacing) * 12);
+    }
+  }
   .md\:h-\[48px\] {
     @media (width >= 48rem) {
       height: 48px;
     }
   }
-  .md\:w-\[107px\] {
+  .md\:min-h-12 {
     @media (width >= 48rem) {
-      width: 107px;
+      min-height: calc(var(--spacing) * 12);
+    }
+  }
+  .md\:min-h-\[48px\] {
+    @media (width >= 48rem) {
+      min-height: 48px;
     }
   }
   .md\:w-\[110px\] {
@@ -928,6 +937,11 @@
   .md\:w-\[620px\] {
     @media (width >= 48rem) {
       width: 620px;
+    }
+  }
+  .md\:max-w-\[144px\] {
+    @media (width >= 48rem) {
+      max-width: 144px;
     }
   }
   .md\:min-w-\[390px\] {
@@ -968,11 +982,6 @@
   .md\:px-0 {
     @media (width >= 48rem) {
       padding-inline: calc(var(--spacing) * 0);
-    }
-  }
-  .md\:px-\[30px\] {
-    @media (width >= 48rem) {
-      padding-inline: 30px;
     }
   }
   .md\:px-\[42px\] {
