--- a/scss/main.scss
+++ b/scss/main.scss
@@ -170,3 +170,47 @@ input[type="checkbox"]{
     }
 }
 
+.stepper{
+    display: flex;
+    width: 153px;
+    height: 16.45px;
+    .stepper-item{
+        display: flex;
+        flex:1;
+        justify-content: center;
+        position: relative;
+
+        &::before{
+        content: "";
+        width: 16.45px;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+        border: 1px solid $color-secondary;
+        background-color: $color-primary;
+        z-index: 2;
+        };
+
+        &:not(:first-child)::after{
+            content: "";
+            height: 1px;
+            background-color: $color-secondary;
+            width: 100%;
+            position: absolute;
+            top:50%;
+            right: 50%;
+            z-index: 1;
+            transform: translateY(-50%);
+        };
+
+        &.active{
+            &::before{
+                background-color: $color-secondary;
+                border-width: 2px;
+                border-color: $color-primary;
+                box-shadow: 0 0 0 1px $color-secondary;
+            };
+
+        };
+    };
+}
+
