--- a/scss/main.css
+++ b/scss/main.css
@@ -211,6 +211,15 @@ input[type=checkbox]:checked::after {
   border-color: #3F5D45;
   box-shadow: 0 0 0 1px #EAF0ED;
 }
+.stepper .stepper-item.check::before {
+  background-color: #EAF0ED;
+  content: "✓";
+  display: flex;
+  color: #3F5D45;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+}
 .stepper .stepper-item.last {
   justify-content: end;
 }
@@ -229,4 +238,23 @@ select option {
 }
 select option.selected {
   color: #8DA291;
+}
+
+.option-btn {
+  background-color: #3F5D45;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #EAF0ED;
+  font-weight: 600;
+  font-size: 20px;
+  border: 1px solid #EAF0ED;
+}
+.option-btn:hover {
+  background-color: #EAF0ED;
+  color: #3F5D45;
+}
+.option-btn:active {
+  background-color: #EAF0ED;
+  color: #3F5D45;
 }/*# sourceMappingURL=main.css.map */
